--- a/doc/src/newcommands.p.tex
+++ b/doc/src/newcommands.p.tex
@@ -5,12 +5,14 @@
 
 % #if FORMAT in ("latex", "pdflatex")
 \newcommand{\uex}{u_{\mbox{\footnotesize e}}}
+\newcommand{\wex}{w_{\mbox{\footnotesize e}}}
 \newcommand{\uexd}[1]{u_{\mbox{\footnotesize e}, #1}}
 \newcommand{\vex}{v_{\mbox{\footnotesize e}}}
 \newcommand{\vexd}[1]{v_{\mbox{\footnotesize e}, #1}}
 \newcommand{\Aex}{A_{\mbox{\footnotesize e}}}
 % #else
 \newcommand{\uex}{{u_{\small\mbox{e}}}}
+\newcommand{\wex}{{w_{\small\mbox{e}}}}
 \newcommand{\uexd}[1]{{u_{\small\mbox{e}, #1}}}
 \newcommand{\vex}{{v_{\small\mbox{e}}}}
 \newcommand{\vexd}[1]{{v_{\small\mbox{e}, #1}}}
