Changed from dolfin import to from fenics import everywhere.

--- a/doc/src/newcommands.p.tex
+++ b/doc/src/newcommands.p.tex
@@ -21,7 +21,7 @@
 
 % Operators
 \newcommand{\Ddt}[1]{\frac{D #1}{dt}}
-\newcommand{\E}[1]{\hbox{E}\lbrack #1 \rbrack}
+\renewcommand{\E}[1]{\hbox{E}\lbrack #1 \rbrack}
 \newcommand{\Var}[1]{\hbox{Var}\lbrack #1 \rbrack}
 \newcommand{\Std}[1]{\hbox{Std}\lbrack #1 \rbrack}
 
@@ -45,7 +45,7 @@
 \newcommand{\strain}{\bm{\varepsilon}}
 \newcommand{\stressc}{{\sigma}}
 \newcommand{\strainc}{{\varepsilon}}
-\newcommand{\I}{\bm{I}}
+\renewcommand{\I}{\bm{I}}
 \newcommand{\T}{\bm{T}}
 
 \newcommand{\dfc}{\alpha}  % diffusion coefficient
