--- a/doc/src/newcommands.p.tex
+++ b/doc/src/newcommands.p.tex
@@ -1,7 +1,8 @@
 \newcommand{\half}{\frac{1}{2}}
 \newcommand{\halfi}{{1/2}}
-\newcommand{\tp}{\thinspace .}
 \newcommand{\dt}{\Delta t}
+% Springer's period for math formulas (Thinspace + Period):
+\newcommand{\tp}{\thinspace .}
 
 % #if FORMAT in ("latex", "pdflatex")
 \newcommand{\uex}{u_{\mbox{\footnotesize e}}}
