--- a/doc/pub/diffusion0.ipynb
+++ b/doc/pub/diffusion0.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "\n",
     "# The time-dependent diffusion equation\n",
-    "<div id=\"tut:timedep\"></div>\n",
+    "<div id=\"ftut:timedep\"></div>\n",
     "\n",
     "Previous examples on using FEniCS to solve the Poisson equation\n",
     "illustrate that solving linear, stationary PDE problems with the aid\n",
@@ -22,8 +22,8 @@
     "\n",
     "<!-- The solution of -->\n",
     "<!-- nonlinear problems, as we showed in Section -->\n",
-    "<!-- ref{tut:poisson:nonlinear}, can also be automated (cf. Section -->\n",
-    "<!-- ref{tut:nonlinear:Newton:auto}), but many scientists will prefer to -->\n",
+    "<!-- ref{ftut:poisson:nonlinear}, can also be automated (cf. Section -->\n",
+    "<!-- ref{ftut:nonlinear:Newton:auto}), but many scientists will prefer to -->\n",
     "<!-- code the solution strategy of the nonlinear problem themselves and -->\n",
     "<!-- experiment with various combinations of strategies in difficult -->\n",
     "<!-- problems. Time-dependent problems are somewhat similar in this -->\n",
@@ -37,7 +37,7 @@
     "simple finite differences?]\n",
     "\n",
     "## Variational formulation\n",
-    "<div id=\"tut:timedep:diffusion1\"></div>\n",
+    "<div id=\"ftut:timedep:diffusion1\"></div>\n",
     "\n",
     "Our model problem for time-dependent PDEs reads"
    ]
@@ -47,12 +47,12 @@
    "metadata": {},
    "source": [
     "<!-- Equation labels as ordinary links -->\n",
-    "<div id=\"tut:diffusion:pde1\"></div>\n",
+    "<div id=\"ftut:diffusion:pde1\"></div>\n",
     "\n",
     "$$\n",
     "\\begin{equation}\n",
     "{\\partial u\\over\\partial t} = \\nabla^2 u + f\\hbox{ in }\\Omega,\n",
-    "\\label{tut:diffusion:pde1} \\tag{1}\n",
+    "\\label{ftut:diffusion:pde1} \\tag{1}\n",
     "\\end{equation}\n",
     "$$"
    ]
@@ -62,12 +62,12 @@
    "metadata": {},
    "source": [
     "<!-- Equation labels as ordinary links -->\n",
-    "<div id=\"tut:diffusion:pde1:bc\"></div>\n",
+    "<div id=\"ftut:diffusion:pde1:bc\"></div>\n",
     "\n",
     "$$\n",
     "\\begin{equation}  \n",
     "u = u_0\\hbox{ on } \\partial \\Omega,\n",
-    "\\label{tut:diffusion:pde1:bc} \\tag{2}\n",
+    "\\label{ftut:diffusion:pde1:bc} \\tag{2}\n",
     "\\end{equation}\n",
     "$$"
    ]
@@ -77,12 +77,12 @@
    "metadata": {},
    "source": [
     "<!-- Equation labels as ordinary links -->\n",
-    "<div id=\"tut:diffusion:pde1:ic\"></div>\n",
+    "<div id=\"ftut:diffusion:pde1:ic\"></div>\n",
     "\n",
     "$$\n",
     "\\begin{equation}  \n",
     "u = I \\mbox{ at } t=0{\\thinspace .}\n",
-    "\\label{tut:diffusion:pde1:ic} \\tag{3}\n",
+    "\\label{ftut:diffusion:pde1:ic} \\tag{3}\n",
     "\\end{equation}\n",
     "$$"
    ]
@@ -113,11 +113,11 @@
    "metadata": {},
    "source": [
     "<!-- Equation labels as ordinary links -->\n",
-    "<div id=\"tut:diffusion:pde1:tk\"></div>\n",
+    "<div id=\"ftut:diffusion:pde1:tk\"></div>\n",
     "\n",
     "$$\n",
     "\\begin{equation} {\\partial \\over\\partial t}u^k = \\nabla^2 u^k + f^k{\\thinspace .}\n",
-    "\\label{tut:diffusion:pde1:tk} \\tag{4}\n",
+    "\\label{ftut:diffusion:pde1:tk} \\tag{4}\n",
     "\\end{equation}\n",
     "$$"
    ]
@@ -136,11 +136,11 @@
    "metadata": {},
    "source": [
     "<!-- Equation labels as ordinary links -->\n",
-    "<div id=\"tut:diffusion:BE\"></div>\n",
+    "<div id=\"ftut:diffusion:BE\"></div>\n",
     "\n",
     "$$\n",
     "\\begin{equation} {\\partial \\over\\partial t}u^k\\approx {u^k - u^{k-1}\\over{{\\Delta t}}},\n",
-    "\\label{tut:diffusion:BE} \\tag{5}\n",
+    "\\label{ftut:diffusion:BE} \\tag{5}\n",
     "\\end{equation}\n",
     "$$"
    ]
@@ -150,7 +150,7 @@
    "metadata": {},
    "source": [
     "where ${\\Delta t}$ is the time discretization parameter.\n",
-    "Inserting [(5)](#tut:diffusion:BE) in [(4)](#tut:diffusion:pde1:tk) yields"
+    "Inserting [(5)](#ftut:diffusion:BE) in [(4)](#ftut:diffusion:pde1:tk) yields"
    ]
   },
   {
@@ -158,12 +158,12 @@
    "metadata": {},
    "source": [
     "<!-- Equation labels as ordinary links -->\n",
-    "<div id=\"tut:diffusion:pde1:BE\"></div>\n",
+    "<div id=\"ftut:diffusion:pde1:BE\"></div>\n",
     "\n",
     "$$\n",
     "\\begin{equation}\n",
     "{u^k - u^{k-1}\\over{{\\Delta t}}} = \\nabla^2 u^k + f^k{\\thinspace .}\n",
-    "\\label{tut:diffusion:pde1:BE} \\tag{6}\n",
+    "\\label{ftut:diffusion:pde1:BE} \\tag{6}\n",
     "\\end{equation}\n",
     "$$"
    ]
@@ -173,9 +173,9 @@
    "metadata": {},
    "source": [
     "This is our time-discrete version of the diffusion PDE\n",
-    "[(1)](#tut:diffusion:pde1).\n",
+    "[(1)](#ftut:diffusion:pde1).\n",
     "\n",
-    "We may reorder [(6)](#tut:diffusion:pde1:BE) so\n",
+    "We may reorder [(6)](#ftut:diffusion:pde1:BE) so\n",
     "that the left-hand side contains the terms with the unknown $u^k$ and\n",
     "the right-hand side contains computed terms only. The result\n",
     "is a recursive set of spatial\n",
@@ -188,11 +188,11 @@
    "metadata": {},
    "source": [
     "<!-- Equation labels as ordinary links -->\n",
-    "<div id=\"tut:diffusion:pde1:u0\"></div>\n",
+    "<div id=\"ftut:diffusion:pde1:u0\"></div>\n",
     "\n",
     "$$\n",
     "\\begin{equation}\n",
-    "u^0 = I, \\label{tut:diffusion:pde1:u0} \\tag{7}\n",
+    "u^0 = I, \\label{ftut:diffusion:pde1:u0} \\tag{7}\n",
     "\\end{equation}\n",
     "$$"
    ]
@@ -202,12 +202,12 @@
    "metadata": {},
    "source": [
     "<!-- Equation labels as ordinary links -->\n",
-    "<div id=\"tut:diffusion:pde1:uk\"></div>\n",
+    "<div id=\"ftut:diffusion:pde1:uk\"></div>\n",
     "\n",
     "$$\n",
     "\\begin{equation}  \n",
     "u^k - {{\\Delta t}}\\nabla^2 u^k =  u^{k-1} + {{\\Delta t}} f^k,\\quad k=1,2,\\ldots\n",
-    "\\label{tut:diffusion:pde1:uk} \\tag{8}\n",
+    "\\label{ftut:diffusion:pde1:uk} \\tag{8}\n",
     "\\end{equation}\n",
     "$$"
    ]
@@ -218,7 +218,7 @@
    "source": [
     "Given $I$, we can solve for $u^0$, $u^1$, $u^2$, and so on.\n",
     "\n",
-    "As an alternative to [(8)](#tut:diffusion:pde1:uk), which can be\n",
+    "As an alternative to [(8)](#ftut:diffusion:pde1:uk), which can be\n",
     "convenient in implementations, we may collect\n",
     "all terms on one side of the equality sign:"
    ]
@@ -228,12 +228,12 @@
    "metadata": {},
    "source": [
     "<!-- Equation labels as ordinary links -->\n",
-    "<div id=\"tut:diffusion:pde1:uk2\"></div>\n",
+    "<div id=\"ftut:diffusion:pde1:uk2\"></div>\n",
     "\n",
     "$$\n",
     "\\begin{equation}\n",
     "u^k - {{\\Delta t}}\\nabla^2 u^k -  u^{k-1} - {{\\Delta t}} f^k = ,\\quad k=1,2,\\ldots\n",
-    "\\label{tut:diffusion:pde1:uk2} \\tag{9}\n",
+    "\\label{ftut:diffusion:pde1:uk2} \\tag{9}\n",
     "\\end{equation}\n",
     "$$"
    ]
@@ -243,8 +243,8 @@
    "metadata": {},
    "source": [
     "We use a finite element method to solve\n",
-    "[(7)](#tut:diffusion:pde1:u0) and either of the equations\n",
-    "[(8)](#tut:diffusion:pde1:uk) or [(9)](#tut:diffusion:pde1:uk2).  This\n",
+    "[(7)](#ftut:diffusion:pde1:u0) and either of the equations\n",
+    "[(8)](#ftut:diffusion:pde1:uk) or [(9)](#ftut:diffusion:pde1:uk2).  This\n",
     "requires turning the equations into weak forms.  As usual, we multiply\n",
     "by a test function $v\\in \\hat V$ and integrate second-derivatives by\n",
     "parts. Introducing the symbol $u$ for $u^k$ (which is natural in the\n",
@@ -266,7 +266,7 @@
    "metadata": {},
    "source": [
     "for\n",
-    "[(7)](#tut:diffusion:pde1:u0). The formulation [(8)](#tut:diffusion:pde1:uk)\n",
+    "[(7)](#ftut:diffusion:pde1:u0). The formulation [(8)](#ftut:diffusion:pde1:uk)\n",
     "gives rise to"
    ]
   },
@@ -291,11 +291,11 @@
    "metadata": {},
    "source": [
     "<!-- Equation labels as ordinary links -->\n",
-    "<div id=\"tut:diffusion:pde1:a0\"></div>\n",
+    "<div id=\"ftut:diffusion:pde1:a0\"></div>\n",
     "\n",
     "$$\n",
     "\\begin{equation}\n",
-    "a_0(u,v) = \\int_\\Omega uv {\\, \\mathrm{d}x}, \\label{tut:diffusion:pde1:a0} \\tag{10}\n",
+    "a_0(u,v) = \\int_\\Omega uv {\\, \\mathrm{d}x}, \\label{ftut:diffusion:pde1:a0} \\tag{10}\n",
     "\\end{equation}\n",
     "$$"
    ]
@@ -305,11 +305,11 @@
    "metadata": {},
    "source": [
     "<!-- Equation labels as ordinary links -->\n",
-    "<div id=\"tut:diffusion:pde1:L0\"></div>\n",
+    "<div id=\"ftut:diffusion:pde1:L0\"></div>\n",
     "\n",
     "$$\n",
     "\\begin{equation}  \n",
-    "L_0(v) = \\int_\\Omega Iv {\\, \\mathrm{d}x}, \\label{tut:diffusion:pde1:L0} \\tag{11}\n",
+    "L_0(v) = \\int_\\Omega Iv {\\, \\mathrm{d}x}, \\label{ftut:diffusion:pde1:L0} \\tag{11}\n",
     "\\end{equation}\n",
     "$$"
    ]
@@ -319,12 +319,12 @@
    "metadata": {},
    "source": [
     "<!-- Equation labels as ordinary links -->\n",
-    "<div id=\"tut:diffusion:pde1:a\"></div>\n",
+    "<div id=\"ftut:diffusion:pde1:a\"></div>\n",
     "\n",
     "$$\n",
     "\\begin{equation}  \n",
     "a(u,v) = \\int_\\Omega\\left( uv + {{\\Delta t}}\n",
-    "\\nabla u\\cdot \\nabla v\\right) {\\, \\mathrm{d}x}, \\label{tut:diffusion:pde1:a} \\tag{12}\n",
+    "\\nabla u\\cdot \\nabla v\\right) {\\, \\mathrm{d}x}, \\label{ftut:diffusion:pde1:a} \\tag{12}\n",
     "\\end{equation}\n",
     "$$"
    ]
@@ -334,12 +334,12 @@
    "metadata": {},
    "source": [
     "<!-- Equation labels as ordinary links -->\n",
-    "<div id=\"tut:diffusion:pde1:L\"></div>\n",
+    "<div id=\"ftut:diffusion:pde1:L\"></div>\n",
     "\n",
     "$$\n",
     "\\begin{equation}  \n",
     "L(v) = \\int_\\Omega \\left(u^{k-1} + {{\\Delta t}}  f^k\\right)v {\\, \\mathrm{d}x}{\\thinspace .}\n",
-    "\\label{tut:diffusion:pde1:L} \\tag{13}\n",
+    "\\label{ftut:diffusion:pde1:L} \\tag{13}\n",
     "\\end{equation}\n",
     "$$"
    ]
@@ -348,7 +348,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The alternative form [(9)](#tut:diffusion:pde1:uk2) has a formulation"
+    "The alternative form [(9)](#ftut:diffusion:pde1:uk2) has a formulation"
    ]
   },
   {
@@ -372,14 +372,14 @@
    "metadata": {},
    "source": [
     "<!-- Equation labels as ordinary links -->\n",
-    "<div id=\"tut:diffusion:pde1:F\"></div>\n",
+    "<div id=\"ftut:diffusion:pde1:F\"></div>\n",
     "\n",
     "$$\n",
     "\\begin{equation}\n",
     "F = \\int_\\Omega\\left( uv + {{\\Delta t}}\n",
     "\\nabla u\\cdot \\nabla v -\n",
     "\\left(u^{k-1} - {{\\Delta t}}  f^k\\right)v\\right) {\\, \\mathrm{d}x}{\\thinspace .}\n",
-    "\\label{tut:diffusion:pde1:F} \\tag{14}\n",
+    "\\label{ftut:diffusion:pde1:F} \\tag{14}\n",
     "\\end{equation}\n",
     "$$"
    ]
@@ -404,7 +404,7 @@
     "latter.  By $u^{k-1}$ we mean the finite element approximation of the\n",
     "solution at time $t_{k-1}$.\n",
     "\n",
-    "Instead of solving [(7)](#tut:diffusion:pde1:u0) by a finite element\n",
+    "Instead of solving [(7)](#ftut:diffusion:pde1:u0) by a finite element\n",
     "method, i.e., projecting $I$ onto $V$ via the problem\n",
     "$a_0(u,v)=L_0(v)$, we could simply interpolate $u^0$ from $I$. That\n",
     "is, if $u^0=\\sum_{j=1}^N U^0_j\\phi_j$, we simply set $U_j=I(x_j,y_j)$,\n",
@@ -415,7 +415,7 @@
     "`interpolate` function.\n",
     "\n",
     "## A simple implementation\n",
-    "<div id=\"tut:timedep:diffusion1:impl\"></div>\n",
+    "<div id=\"ftut:timedep:diffusion1:impl\"></div>\n",
     "\n",
     "Our program needs to implement the time stepping explicitly, but can\n",
     "rely on FEniCS to easily compute $a_0$, $L_0$, $F$, $a$, and $L$, and solve\n",
@@ -435,11 +435,11 @@
    "metadata": {},
    "source": [
     "<!-- Equation labels as ordinary links -->\n",
-    "<div id=\"tut:diffusion:pde1:u0test\"></div>\n",
+    "<div id=\"ftut:diffusion:pde1:u0test\"></div>\n",
     "\n",
     "$$\n",
     "\\begin{equation} u = 1 + x^2 + \\alpha y^2 + \\beta t,\n",
-    "\\label{tut:diffusion:pde1:u0test} \\tag{15}\n",
+    "\\label{ftut:diffusion:pde1:u0test} \\tag{15}\n",
     "\\end{equation}\n",
     "$$"
    ]
@@ -451,9 +451,9 @@
     "yields a function whose computed values at the nodes will be exact,\n",
     "regardless of the size of the elements and ${\\Delta t}$, as long as the mesh\n",
     "is uniformly partitioned.  By inserting\n",
-    "[(15)](#tut:diffusion:pde1:u0test) in the PDE problem\n",
-    "[(1)](#tut:diffusion:pde1), it follows that $u_0$ must be given as\n",
-    "[(15)](#tut:diffusion:pde1:u0test) and that $f(x,y,t)=\\beta - 2 -\n",
+    "[(15)](#ftut:diffusion:pde1:u0test) in the PDE problem\n",
+    "[(1)](#ftut:diffusion:pde1), it follows that $u_0$ must be given as\n",
+    "[(15)](#ftut:diffusion:pde1:u0test) and that $f(x,y,t)=\\beta - 2 -\n",
     "2\\alpha$ and $I(x,y)=1+x^2+\\alpha y^2$.\n",
     "\n",
     "\n",
@@ -486,7 +486,7 @@
    "source": [
     "A new programming issue is how to deal with functions that vary in\n",
     "space *and time*, such as the boundary condition $u_0$ given by\n",
-    "[(15)](#tut:diffusion:pde1:u0test).  A natural solution is to apply an\n",
+    "[(15)](#ftut:diffusion:pde1:u0test).  A natural solution is to apply an\n",
     "`Expression` object with time $t$ as a parameter, in addition to the\n",
     "parameters $\\alpha$ and $\\beta$\n",
     "for `Expression` objects with parameters:"
@@ -587,7 +587,7 @@
     "**Projecting versus interpolating the initial condition.**\n",
     "\n",
     "To actually recover the\n",
-    "exact solution [(15)](#tut:diffusion:pde1:u0test) to machine precision,\n",
+    "exact solution [(15)](#ftut:diffusion:pde1:u0test) to machine precision,\n",
     "it is important not to compute the discrete initial condition by\n",
     "projecting $I$, but by interpolating $I$ so that the nodal values are\n",
     "exact at $t=0$ (projection results in approximative values at the\n",
