--- a/doc/pub/poisson0.ipynb
+++ b/doc/pub/poisson0.ipynb
@@ -24,12 +24,12 @@
    "metadata": {},
    "source": [
     "<!-- Equation labels as ordinary links -->\n",
-    "<div id=\"tut:poisson1\"></div>\n",
+    "<div id=\"ftut:poisson1\"></div>\n",
     "\n",
     "$$\n",
     "\\begin{equation}\n",
     "- \\nabla^2 u(\\boldsymbol{x}) = f(\\boldsymbol{x}),\\quad \\boldsymbol{x}\\mbox{ in } \\Omega,\n",
-    "\\label{tut:poisson1} \\tag{1}\n",
+    "\\label{ftut:poisson1} \\tag{1}\n",
     "\\end{equation}\n",
     "$$"
    ]
@@ -39,11 +39,11 @@
    "metadata": {},
    "source": [
     "<!-- Equation labels as ordinary links -->\n",
-    "<div id=\"tut:poisson1:bc\"></div>\n",
+    "<div id=\"ftut:poisson1:bc\"></div>\n",
     "\n",
     "$$\n",
     "\\begin{equation}  \n",
-    "u(\\boldsymbol{x}) = u_0(\\boldsymbol{x}),\\quad \\boldsymbol{x}\\mbox{ on } \\partial \\Omega{\\thinspace .} \\label{tut:poisson1:bc} \\tag{2}\n",
+    "u(\\boldsymbol{x}) = u_0(\\boldsymbol{x}),\\quad \\boldsymbol{x}\\mbox{ on } \\partial \\Omega{\\thinspace .} \\label{ftut:poisson1:bc} \\tag{2}\n",
     "\\end{equation}\n",
     "$$"
    ]
@@ -97,10 +97,10 @@
    "metadata": {},
    "source": [
     "<!-- Equation labels as ordinary links -->\n",
-    "<div id=\"tut:poisson1:var\"></div>\n",
+    "<div id=\"ftut:poisson1:var\"></div>\n",
     "\n",
     "$$\n",
-    "\\begin{equation} \\label{tut:poisson1:var} \\tag{4}\n",
+    "\\begin{equation} \\label{ftut:poisson1:var} \\tag{4}\n",
     "  \\int_{\\Omega} \\nabla u \\cdot \\nabla v {\\, \\mathrm{d}x} =\n",
     "  \\int_{\\Omega} fv {\\, \\mathrm{d}x}\n",
     "  \\quad \\forall v \\in \\hat{V}\n",
@@ -146,12 +146,12 @@
    "metadata": {},
    "source": [
     "<!-- Equation labels as ordinary links -->\n",
-    "<div id=\"tut:poisson1:vard:a\"></div>\n",
+    "<div id=\"ftut:poisson1:vard:a\"></div>\n",
     "\n",
     "$$\n",
     "\\begin{equation}\n",
     "a(u, v) = \\int_{\\Omega} \\nabla u \\cdot \\nabla v {\\, \\mathrm{d}x},\n",
-    "\\label{tut:poisson1:vard:a} \\tag{6}\n",
+    "\\label{ftut:poisson1:vard:a} \\tag{6}\n",
     "\\end{equation}\n",
     "$$"
    ]
@@ -161,11 +161,11 @@
    "metadata": {},
    "source": [
     "<!-- Equation labels as ordinary links -->\n",
-    "<div id=\"tut:poisson1:vard:L\"></div>\n",
+    "<div id=\"ftut:poisson1:vard:L\"></div>\n",
     "\n",
     "$$\n",
     "\\begin{equation}  \n",
-    "L(v) = \\int_{\\Omega} fv {\\, \\mathrm{d}x}{\\thinspace .}  \\label{tut:poisson1:vard:L} \\tag{7}\n",
+    "L(v) = \\int_{\\Omega} fv {\\, \\mathrm{d}x}{\\thinspace .}  \\label{ftut:poisson1:vard:L} \\tag{7}\n",
     "\\end{equation}\n",
     "$$"
    ]
@@ -187,9 +187,9 @@
     "    degree and type).\n",
     "\n",
     "## Choosing a test problem\n",
-    "<div id=\"tut:poisson1:testproblem\"></div>\n",
+    "<div id=\"ftut:poisson1:testproblem\"></div>\n",
     "\n",
-    "The Poisson equation [(1)](#tut:poisson1) has so far featured a general\n",
+    "The Poisson equation [(1)](#ftut:poisson1) has so far featured a general\n",
     "domain $\\Omega$ and general functions $u_0$ and $f$. For our first\n",
     "implementation, we must decide on specific choices of $\\Omega$, $u_0$,\n",
     "and $f$.  It will be wise to construct a specific problem where we can\n",
@@ -208,11 +208,11 @@
    "metadata": {},
    "source": [
     "<!-- Equation labels as ordinary links -->\n",
-    "<div id=\"tut:poisson1:impl:uex\"></div>\n",
+    "<div id=\"ftut:poisson1:impl:uex\"></div>\n",
     "\n",
     "$$\n",
     "\\begin{equation}\n",
-    "\\label{tut:poisson1:impl:uex} \\tag{8}\n",
+    "\\label{ftut:poisson1:impl:uex} \\tag{8}\n",
     "{u_{\\small\\mbox{e}}}(x,y) = 1 +x^2 + 2y^2{\\thinspace .}\n",
     "\\end{equation}\n",
     "$$"
@@ -222,8 +222,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By inserting [(8)](#tut:poisson1:impl:uex) into the Poisson equation\n",
-    "[(1)](#tut:poisson1), we find that ${u_{\\small\\mbox{e}}}(x,y)$ is a solution if"
+    "By inserting [(8)](#ftut:poisson1:impl:uex) into the Poisson equation\n",
+    "[(1)](#ftut:poisson1), we find that ${u_{\\small\\mbox{e}}}(x,y)$ is a solution if"
    ]
   },
   {
@@ -290,8 +290,8 @@
     "\n",
     "\n",
     "## FEniCS implementation\n",
-    "<div id=\"tut:poisson1:impl\"></div>\n",
-    "<div id=\"tut:poisson1:impl:code\"></div>\n",
+    "<div id=\"ftut:poisson1:impl\"></div>\n",
+    "<div id=\"ftut:poisson1:impl:code\"></div>\n",
     "\n",
     "A FEniCS program for solving our test problem for the Poisson equation\n",
     "in 2D with the given choices of $u_0$, $f$, and $\\Omega$ may look as\n",
@@ -356,7 +356,7 @@
    "metadata": {},
    "source": [
     "## Dissection of the program\n",
-    "<div id=\"tut:poisson1:impl:dissect\"></div>\n",
+    "<div id=\"ftut:poisson1:impl:dissect\"></div>\n",
     "\n",
     "\n",
     "The listed FEniCS program defines a finite element mesh, a finite\n",
@@ -879,11 +879,11 @@
    "metadata": {},
    "source": [
     "<!-- Equation labels as ordinary links -->\n",
-    "<div id=\"tut:poisson1:ufem\"></div>\n",
+    "<div id=\"ftut:poisson1:ufem\"></div>\n",
     "\n",
     "$$\n",
     "\\begin{equation}\n",
-    "u = \\sum_{j=1}^N U_j \\phi_j \\label{tut:poisson1:ufem} \\tag{9}{\\thinspace .}\n",
+    "u = \\sum_{j=1}^N U_j \\phi_j \\label{ftut:poisson1:ufem} \\tag{9}{\\thinspace .}\n",
     "\\end{equation}\n",
     "$$"
    ]
@@ -1096,11 +1096,11 @@
     "You can save the figure to file by **File - Export Scene...** and choosing\n",
     "a suitable filename.\n",
     "\n",
-    "<!-- dom:FIGURE: [fig/poisson0_paraview.pdf, weight=800 frac=1] Visualization of test problem in ParaView, with contour lines added in the right plot. -->\n",
+    "<!-- dom:FIGURE: [fig/poisson0_paraview.png, weight=800 frac=1] Visualization of test problem in ParaView, with contour lines added in the right plot. -->\n",
     "<!-- begin figure -->\n",
     "\n",
     "<p>Visualization of test problem in ParaView, with contour lines added in the right plot.</p>\n",
-    "<img src=\"fig/poisson0_paraview.pdf\" weight=800>\n",
+    "<img src=\"fig/poisson0_paraview.png\" weight=800>\n",
     "\n",
     "<!-- end figure -->\n",
     "\n",
