Initial work on convdiff chapter.

--- a/doc/src/newcommands.p.tex
+++ b/doc/src/newcommands.p.tex
@@ -10,7 +10,8 @@
 \newcommand{\uexd}[1]{u_{\mbox{\footnotesize e}, #1}}
 \newcommand{\vex}{v_{\mbox{\footnotesize e}}}
 \newcommand{\vexd}[1]{v_{\mbox{\footnotesize e}, #1}}
-\newcommand{\Aex}{A_{\mbox{\footnotesize e}}}
+\newcommand{\Aex
+}{A_{\mbox{\footnotesize e}}}
 % #else
 \newcommand{\uex}{{u_{\small\mbox{e}}}}
 \newcommand{\wex}{{w_{\small\mbox{e}}}}
@@ -101,7 +102,11 @@
 % FEniCS commands
 \newcommand{\dX}{\, \mathrm{d}X}
 \newcommand{\dx}{\, \mathrm{d}x}
+\newcommand{\dr}{\, \mathrm{d}r}
 \newcommand{\ds}{\, \mathrm{d}s}
 \newcommand{\Real}{\mathbb{R}}
 \newcommand{\Integerp}{\mathbb{N}}
 \newcommand{\Integer}{\mathbb{Z}}
+
+% Units
+\newcommand{\WmK}{\mathrm{W}\cdot\mathrm{m}^{-1}\cdot\mathrm{K}^{-1}}
