Finish editing Section 3.2 (nonlinear Poisson)

--- a/doc/src/newcommands.p.tex
+++ b/doc/src/newcommands.p.tex
@@ -108,5 +108,8 @@
 \newcommand{\Integerp}{\mathbb{N}}
 \newcommand{\Integer}{\mathbb{Z}}
 
+% Misc notation
+\newcommand{\ub}{u_{\mathrm{b}}}
+
 % Units
 \newcommand{\WmK}{\mathrm{W}\cdot\mathrm{m}^{-1}\cdot\mathrm{K}^{-1}}
