Some more work on Navier-Stokes

--- a/doc/src/newcommands.p.tex
+++ b/doc/src/newcommands.p.tex
@@ -110,6 +110,7 @@
 
 % Misc notation
 \newcommand{\ub}{u_{\mathrm{b}}}
+\newcommand{\renni}[2]{\langle #2, #1 \rangle}
 
 % Units
 \newcommand{\WmK}{\mathrm{W}\cdot\mathrm{m}^{-1}\cdot\mathrm{K}^{-1}}
