More work on Navier-Stokes text and consistency fixes

--- a/doc/src/newcommands.p.tex
+++ b/doc/src/newcommands.p.tex
@@ -88,6 +88,7 @@
 % Finite elements
 \newcommand{\basphi}{\varphi}
 \newcommand{\baspsi}{\psi}
+
 \newcommand{\refphi}{\tilde\basphi}
 \newcommand{\psib}{\bm{\psi}}
 \newcommand{\sinL}[1]{\sin\left((#1+1)\pi\frac{x}{L}\right)}
@@ -110,6 +111,7 @@
 
 % Misc notation
 \newcommand{\ub}{u_{\mathrm{b}}}
+\newcommand{\inner}[2]{\langle #1, #2 \rangle}
 \newcommand{\renni}[2]{\langle #2, #1 \rangle}
 
 % Units
