--- a/doc/src/newcommands.p.tex
+++ b/doc/src/newcommands.p.tex
@@ -109,7 +109,9 @@
 \newcommand{\Integer}{\mathbb{Z}}
 
 % Misc notation
-\newcommand{\ub}{u_{\mathrm{b}}}
+\newcommand{\uI}{u_{_0}}
+\newcommand{\ub}{u_{_\mathrm{D}}} % should perhaps be renamed to uD
+\newcommand{\uN}{u_{_\mathrm{N}}}
 \newcommand{\inner}[2]{\langle #1, #2 \rangle}
 \newcommand{\renni}[2]{\langle #2, #1 \rangle}
 
