Finish up editing of Chapter for, except for new material on magnetostatics that will be added.

--- a/doc/src/newcommands.p.tex
+++ b/doc/src/newcommands.p.tex
@@ -110,9 +110,13 @@
 
 % Misc notation
 \newcommand{\uI}{u_{_0}}
-\newcommand{\ub}{u_{_\mathrm{D}}} % should perhaps be renamed to uD
+\newcommand{\ub}{u_{_\mathrm{D}}}
 \newcommand{\uN}{u_{_\mathrm{N}}}
+\newcommand{\GD}{\Gamma_{_\mathrm{D}}}
+\newcommand{\GN}{\Gamma_{_\mathrm{N}}}
+\newcommand{\GR}{\Gamma_{_\mathrm{R}}}
 \newcommand{\inner}[2]{\langle #1, #2 \rangle}
+
 \newcommand{\renni}[2]{\langle #2, #1 \rangle}
 
 % Units
