--- a/src/TODO
+++ b/src/TODO
@@ -155,6 +155,7 @@ print 'END'
    List of most useful FEniCS classes and most useful member functions: Mesh, FunctionSpace, VectorFunctionSpace, DirichletBC, etc.
 Comments after proofreading August 2016
 
+[ ] Move Python codes for vol1 to vol1/python, the rest to vol2/python
 [ ] Needed to use $\text{Lam\'e's}$ to trick doconce spellchecker
 [ ] Needed to uncomment line \usepackage[utf8x]{inputenc} in latex.py
     when using Springer_sv to fix Norwegian and Swedish characters in preface
