Cleanout some FIXMEs

--- a/src/TODO
+++ b/src/TODO
@@ -1,6 +1,8 @@
 Proofreading August 2016
 ========================
 
+[ ] Rework bcs as list of tuples in poisson_bcs.py
+[ ] Rework BoxField.py and rename to boxfield.py
 [ ] Create web page for book: fenicsproject.org/tutorial
 [ ] Should we reference functions `foo` or `foo()`.
     In Chapter 5 we use `solver` but `foo()` earlier in the book
