--- a/src/TODO
+++ b/src/TODO
@@ -1,18 +1,20 @@
 Proofreading August 2016
 ========================
 
+[HPL] Should we reference functions `foo` or `foo()`.
+      In Chapter 5 we use `solver` but `foo()` earlier in the book
+[HPL] Look at some remaining issues in red in book
+[HPL] Should we use alignat? Still problem for mathjax/sphinx?
+[ ] Test and edit all programs in vol1/python/
 [ ] Rework bcs as list of tuples in poisson_bcs.py
 [ ] Rework BoxField.py and rename to boxfield.py
-[ ] Create web page for book: fenicsproject.org/tutorial
-[ ] Should we reference functions `foo` or `foo()`.
-    In Chapter 5 we use `solver` but `foo()` earlier in the book
-[ ] """Comment""" in functions even if just one line?
-
-[ ] Check that we are not missing important references: DOLFIN paper
-[ ] Why CamelCase for BoxField? It's a Python module, so better named it boxfield?
-[ ] Need to add instructions for how to send feedback and report typos
-[ ] Should we use alignat? Still problem for mathjax/sphinx?
 [ ] Renumber to 0, 1, 2 in NS and reaction examples
+[ ] Check that we are not missing important references: DOLFIN paper
+[ ] Need to add instructions for how to send feedback and report typos
+[ ] Create web page for book: fenicsproject.org/tutorial
+[x] Why CamelCase for BoxField? It's a Python module, so better name
+    it boxfield? Yes AL will fix.
+[x] """Comment""" in functions even if just one line?
 [x] Move Python codes for vol1 to vol1/python, the rest to vol2/python
 [x] Needed to use $\text{Lam\'e's}$ to trick doconce spellchecker
 [x] Needed to uncomment line \usepackage[utf8x]{inputenc} in latex.py
