--- a/src/TODO
+++ b/src/TODO
@@ -5,6 +5,7 @@ Proofreading August 2016
       In Chapter 5 we use `solver` but `foo()` earlier in the book
 [HPL] Look at some remaining issues in red in book
 [HPL] Should we use alignat? Still problem for mathjax/sphinx?
+[ ] Remaining poisson_function --> poisson_solver
 [ ] Test and edit all programs in vol1/python/
 [ ] Rework bcs as list of tuples in poisson_bcs.py
 [ ] Rework BoxField.py and rename to boxfield.py
