--- a/src/TODO
+++ b/src/TODO
@@ -5,6 +5,22 @@ Proofreading August 2016
       In Chapter 5 we use `solver` but `foo()` earlier in the book
 [HPL] Look at some remaining issues in red in book
 [HPL] Should we use alignat? Still problem for mathjax/sphinx?
+
+[ ] Edit 'poisson': 'ft01_poisson',
+[ ] Edit 'poisson_membrane': 'ft02_poisson_membrane',
+[ ] Edit 'poisson_function': 'ft03_poisson_function',
+[ ] Edit 'heat': 'ft04_heat',
+[ ] Edit 'gaussian_diffusion': 'ft05_gaussian_diffusion',
+[ ] Edit 'poisson_nonlinear': 'ft06_poisson_nonlinear',
+[ ] Edit 'elasticity': 'ft07_elasticity',
+[ ] Edit 'navier_stokes_channel': 'ft08_navier_stokes_channel',
+[ ] Edit 'navier_stokes_cylinder': 'ft09_navier_stokes_cylinder',
+[ ] Edit 'reaction_system': 'ft10_reaction_system',
+[ ] Edit 'poisson_bcs': 'ft11_poisson_bcs',
+[ ] Edit 'magnetostatics': 'ft12_magnetostatics',
+[ ] Edit 'poisson_solver': 'ft13_poisson_solver',
+[ ] Edit 'membrane': 'ft14_membrane',
+[ ] Edit 'poisson_iterative': 'ft15_poisson_iterative'
 [ ] Remaining poisson_function --> poisson_solver
 [ ] Test and edit all programs in vol1/python/
 [ ] Rework bcs as list of tuples in poisson_bcs.py
