Fix a remaining poisson_function --> poisson_solver and update mako_code.txt

--- a/src/TODO
+++ b/src/TODO
@@ -1,11 +1,9 @@
 Proofreading August 2016
 ========================
 
-[HPL] Should we reference functions `foo` or `foo()`.
-      In Chapter 5 we use `solver` but `foo()` earlier in the book
-[HPL] Look at some remaining issues in red in book
-[HPL] Should we use alignat? Still problem for mathjax/sphinx?
-
+[ ] Refer to functions as `foo` if arguments are not important
+[x] Look at some remaining issues in red in book
+[ ] Use alignat in equations
 [ ] Edit 'poisson': 'ft01_poisson',
 [ ] Edit 'poisson_membrane': 'ft02_poisson_membrane',
 [ ] Edit 'poisson_function': 'ft03_poisson_function',
@@ -21,7 +19,7 @@ Proofreading August 2016
 [ ] Edit 'poisson_solver': 'ft13_poisson_solver',
 [ ] Edit 'membrane': 'ft14_membrane',
 [ ] Edit 'poisson_iterative': 'ft15_poisson_iterative'
-[ ] Remaining poisson_function --> poisson_solver
+[x] Remaining poisson_function --> poisson_solver
 [ ] Test and edit all programs in vol1/python/
 [ ] Rework bcs as list of tuples in poisson_bcs.py
 [ ] Rework BoxField.py and rename to boxfield.py
