--- a/src/TODO
+++ b/src/TODO
@@ -4,8 +4,8 @@ Proofreading August 2016
 [ ] Refer to functions as `foo` if arguments are not important
 [x] Look at some remaining issues in red in book
 [ ] Use alignat in equations
-[ ] Edit 'poisson': 'ft01_poisson',
-[ ] Edit 'poisson_membrane': 'ft02_poisson_membrane',
+[x] Edit 'poisson': 'ft01_poisson',
+[x] Edit 'poisson_membrane': 'ft02_poisson_membrane',
 [ ] Edit 'poisson_solver': 'ft03_poisson_solver',
 [ ] Edit 'heat': 'ft04_heat',
 [ ] Edit 'gaussian_diffusion': 'ft05_gaussian_diffusion',
