--- a/src/TODO
+++ b/src/TODO
@@ -6,7 +6,7 @@ Proofreading August 2016
 [ ] Use alignat in equations
 [x] Edit 'poisson': 'ft01_poisson',
 [x] Edit 'poisson_membrane': 'ft02_poisson_membrane',
-[ ] Edit 'poisson_solver': 'ft03_poisson_solver',
+[x] Edit 'poisson_solver': 'ft03_poisson_solver',
 [ ] Edit 'heat': 'ft04_heat',
 [ ] Edit 'gaussian_diffusion': 'ft05_gaussian_diffusion',
 [ ] Edit 'poisson_nonlinear': 'ft06_poisson_nonlinear',
