Checks and consistency fixes for heat.py

--- a/src/TODO
+++ b/src/TODO
@@ -7,7 +7,7 @@ Proofreading August 2016
 [x] Edit 'poisson': 'ft01_poisson',
 [x] Edit 'poisson_membrane': 'ft02_poisson_membrane',
 [x] Edit 'poisson_solver': 'ft03_poisson_solver',
-[ ] Edit 'heat': 'ft04_heat',
+[x] Edit 'heat': 'ft04_heat',
 [ ] Edit 'gaussian_diffusion': 'ft05_gaussian_diffusion',
 [ ] Edit 'poisson_nonlinear': 'ft06_poisson_nonlinear',
 [ ] Edit 'elasticity': 'ft07_elasticity',
