--- a/src/TODO
+++ b/src/TODO
@@ -8,7 +8,7 @@ Proofreading August 2016
 [x] Edit 'poisson_membrane': 'ft02_poisson_membrane',
 [x] Edit 'poisson_solver': 'ft03_poisson_solver',
 [x] Edit 'heat': 'ft04_heat',
-[ ] Edit 'gaussian_diffusion': 'ft05_gaussian_diffusion',
+[x] Edit 'gaussian_diffusion': 'ft05_gaussian_diffusion',
 [ ] Edit 'poisson_nonlinear': 'ft06_poisson_nonlinear',
 [ ] Edit 'elasticity': 'ft07_elasticity',
 [ ] Edit 'navier_stokes_channel': 'ft08_navier_stokes_channel',
