--- a/src/TODO
+++ b/src/TODO
@@ -1,6 +1,15 @@
 Proofreading August 2016
 ========================
 
+[ ] Comment from Marco Morandi 2016-09-23: add details on div sigma
+[ ] MSA: numerical integration dx(degree=q)
+[ ] MSA: example with sin(x[0]) instead of Expression
+[ ] MSA: page 108 text outside box
+[ ] MSA: page 101 fenics.sin calls math.sin if arg not symbolic
+[ ] MSA: page 82 use triangle without the quotes
+[ ] MSA: Add example on using UFL for manufactured solutions
+[ ] MSA: dot inner can be written as u**2
+[ ] MSA: Expression and degree argument, page 30, 91-94, 120, 124, 125, 127
 [ ] Refer to functions as `foo` if arguments are not important
 [x] Look at some remaining issues in red in book
 [ ] Use alignat in equations
