--- a/src/TODO
+++ b/src/TODO
@@ -1,7 +1,7 @@
 Proofreading August 2016
 ========================
 
-[ ] Comment from Jack Hale: include raw docker command
+[x] Comment from Jack Hale: include raw docker command
 [ ] Comment from Jack Hale: move note on plotting docker closer to first plot
 [ ] Comment from Marco Morandi 2016-09-23: add details on div sigma
 [ ] MSA: numerical integration dx(degree=q)
