--- a/src/TODO
+++ b/src/TODO
@@ -2,7 +2,7 @@ Proofreading August 2016
 ========================
 
 [x] Comment from Jack Hale: include raw docker command
-[ ] Comment from Jack Hale: move note on plotting docker closer to first plot
+[x] Comment from Jack Hale: move note on plotting docker closer to first plot
 [ ] Comment from Marco Morandi 2016-09-23: add details on div sigma
 [ ] MSA: numerical integration dx(degree=q)
 [ ] MSA: example with sin(x[0]) instead of Expression
