Add missing degree arguments in Expressions

--- a/src/TODO
+++ b/src/TODO
@@ -11,7 +11,7 @@ Proofreading August 2016
 [ ] MSA: page 82 use triangle without the quotes
 [ ] MSA: Add example on using UFL for manufactured solutions
 [ ] MSA: dot inner can be written as u**2
-[ ] MSA: Expression and degree argument, page 30, 91-94, 120, 124, 125, 127
+[x] MSA: Expression and degree argument, page 30, 91-94, 120, 124, 125, 127
 [ ] Refer to functions as `foo` if arguments are not important
 [x] Look at some remaining issues in red in book
 [ ] Use alignat in equations
