Fix a number of TODO items

--- a/src/TODO
+++ b/src/TODO
@@ -6,15 +6,22 @@ Proofreading August 2016
 [ ] Comment from Marco Morandi 2016-09-23: add details on div sigma
 [ ] MSA: numerical integration dx(degree=q)
 [ ] MSA: example with sin(x[0]) instead of Expression
-[ ] MSA: page 108 text outside box
-[ ] MSA: page 101 fenics.sin calls math.sin if arg not symbolic
-[ ] MSA: page 82 use triangle without the quotes
 [ ] MSA: Add example on using UFL for manufactured solutions
-[ ] MSA: dot inner can be written as u**2
+[x] MSA: dot inner can be written as u**2
+[x] MSA: page 108 text outside box
+[x] MSA: page 101 fenics.sin calls math.sin if arg not symbolic
+[x] MSA: page 82 use triangle without the quotes
 [x] MSA: Expression and degree argument, page 30, 91-94, 120, 124, 125, 127
-[ ] Refer to functions as `foo` if arguments are not important
+[x] Refer to functions as `foo` if arguments are not important
 [x] Look at some remaining issues in red in book
 [ ] Use alignat in equations
+[ ] Rework bcs as list of tuples in poisson_bcs.py
+[ ] Rework BoxField.py and rename to boxfield.py
+[ ] Renumber to 0, 1, 2 in NS and reaction examples
+[ ] Check that we are not missing important references: DOLFIN paper
+[ ] Create web page for book: fenicsproject.org/tutorial
+[x] Need to add instructions for how to send feedback and report typos
+    https://github.com/hplgit/fenics-tutorial
 [x] Edit 'poisson': 'ft01_poisson',
 [x] Edit 'poisson_membrane': 'ft02_poisson_membrane',
 [x] Edit 'poisson_solver': 'ft03_poisson_solver',
@@ -29,14 +36,6 @@ Proofreading August 2016
 [ ] Edit 'magnetostatics': 'ft12_magnetostatics',
 [ ] Edit 'poisson_iterative': 'ft13_poisson_iterative'
 [x] Remaining poisson_function --> poisson_solver
-[ ] Test and edit all programs in vol1/python/
-[ ] Rework bcs as list of tuples in poisson_bcs.py
-[ ] Rework BoxField.py and rename to boxfield.py
-[ ] Renumber to 0, 1, 2 in NS and reaction examples
-[ ] Check that we are not missing important references: DOLFIN paper
-[ ] Need to add instructions for how to send feedback and report typos
-    https://github.com/hplgit/fenics-tutorial
-[ ] Create web page for book: fenicsproject.org/tutorial
 [x] Why CamelCase for BoxField? It's a Python module, so better name
     it boxfield? Yes AL will fix.
 [x] """Comment""" in functions even if just one line?
@@ -55,7 +54,6 @@ Proofreading August 2016
     anymore.
 [x] Think about whether to use http or https in references
 [x] Check that Docker image stable-py3 is actually available: It's not
-[ ] Alignment of equations: $x \in \Omega$ using alignat
 [x] How to run spellcheck?
     HPL: I do that automatically (doconce spellcheck - much inspired by
     the fenics book spellchack) for every compile.
