Fix another comment from Martin

--- a/src/TODO
+++ b/src/TODO
@@ -1,12 +1,13 @@
 Proofreading August 2016
 ========================
 
+[-] MSA: Add example on using UFL for manufactured solutions
+    Not done, but skip for now
 [x] Comment from Jack Hale: include raw docker command
 [x] Comment from Jack Hale: move note on plotting docker closer to first plot
 [ ] Comment from Marco Morandi 2016-09-23: add details on div sigma
-[ ] MSA: numerical integration dx(degree=q)
-[ ] MSA: example with sin(x[0]) instead of Expression
-[ ] MSA: Add example on using UFL for manufactured solutions
+[x] MSA: numerical integration dx(degree=q)
+[x] MSA: example with sin(x[0]) instead of Expression
 [x] MSA: dot inner can be written as u**2
 [x] MSA: page 108 text outside box
 [x] MSA: page 101 fenics.sin calls math.sin if arg not symbolic
