--- a/src/TODO
+++ b/src/TODO
@@ -15,10 +15,8 @@ Proofreading August 2016
 [x] MSA: Expression and degree argument, page 30, 91-94, 120, 124, 125, 127
 [x] Refer to functions as `foo` if arguments are not important
 [x] Look at some remaining issues in red in book
-[ ] Use alignat in equations
-[ ] Rework bcs as list of tuples in poisson_bcs.py
-[ ] Rework BoxField.py and rename to boxfield.py
-[ ] Renumber to 0, 1, 2 in NS and reaction examples
+[x] Use alignat in equations
+[x] Consistent bold font vectors?
 [ ] Check that we are not missing important references: DOLFIN paper
 [ ] Create web page for book: fenicsproject.org/tutorial
 [x] Need to add instructions for how to send feedback and report typos
@@ -36,6 +34,9 @@ Proofreading August 2016
 [ ] Edit 'poisson_bcs': 'ft11_poisson_bcs',
 [ ] Edit 'magnetostatics': 'ft12_magnetostatics',
 [ ] Edit 'poisson_iterative': 'ft13_poisson_iterative'
+[ ] Renumber to 0, 1, 2 in NS and reaction examples
+[ ] Rework bcs as list of tuples in poisson_bcs.py
+[ ] Rework BoxField.py and rename to boxfield.py
 [x] Remaining poisson_function --> poisson_solver
 [x] Why CamelCase for BoxField? It's a Python module, so better name
     it boxfield? Yes AL will fix.
